--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -11,6 +11,8 @@
 [-RegularExpressions::ProhibitComplexRegexes]
 [-Documentation::PodSpelling]
 [-Documentation::RequirePodAtEnd]
+[-Modules::ProhibitAutomaticExportation]
+[-Modules::ProhibitMultiplePackages]
 
 [ValuesAndExpressions::ProhibitInterpolationOfLiterals]
 allow_if_string_contains_single_quote = 1
