--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -1,5 +1,4 @@
 [-CodeLayout::RequireTidyCode]
-[-Miscellanea::RequireRcsKeywords]
 [-Modules::RequireVersionVar]
 [-ValuesAndExpressions::ProhibitVersionStrings]
 [-CodeLayout::ProhibitTrailingWhitespace]
@@ -9,17 +8,33 @@
 [-ValuesAndExpressions::ProhibitEmptyQuotes]
 [-RegularExpressions::RequireLineBoundaryMatching]
 [-RegularExpressions::ProhibitComplexRegexes]
+[-RegularExpressions::RequireExtendedFormatting]
 [-Documentation::PodSpelling]
 [-Documentation::RequirePodAtEnd]
 [-Modules::ProhibitAutomaticExportation]
 [-Modules::ProhibitMultiplePackages]
+[-ValuesAndExpressions::ProhibitNoisyQuotes]
+[-ValuesAndExpressions::ProhibitImplicitNewlines]
+[-InputOutput::RequireBriefOpen]
+[-Variables::ProhibitLocalVars]
+[-NamingConventions::ProhibitAmbiguousNames]
+[-Subroutines::ProhibitNestedSubs]
+[-BuiltinFunctions::ProhibitStringyEval]
+[-BuiltinFunctions::ProhibitReverseSortBlock]
+[-ValuesAndExpressions::ProhibitLongChainsOfMethodCalls]
+[-ValuesAndExpressions::ProhibitCommaSeparatedStatements]
+[-ControlStructures::ProhibitDeepNests]
+[-Subroutines::ProhibitManyArgs]
 
 [ValuesAndExpressions::ProhibitInterpolationOfLiterals]
 allow_if_string_contains_single_quote = 1
 
-[RegularExpressions::RequireExtendedFormatting]
-minimum_regex_length_to_complain_about = 40
+[ValuesAndExpressions::RequireNumberSeparators]
+min_value = 65535
+
+[Variables::RequireLocalizedPunctuationVars]
+allow = %ENV
 
 [Documentation::RequirePodSections]
-lib_sections    = NAME | SYNOPSIS | DESCRIPTION | SUBROUTINES/METHODS | CONFIGURATION AND ENVIRONMENT | DEPENDENCIES | INCOMPATIBILITIES | AUTHOR
-script_sections = NAME | USAGE | DESCRIPTION | REQUIRED ARGUMENTS | OPTIONS | CONFIGURATION | DEPENDENCIES | INCOMPATIBILITIES | AUTHOR
+lib_sections    = NAME | SYNOPSIS | DESCRIPTION | SUBROUTINES/METHODS | AUTHOR
+script_sections = NAME | USAGE | DESCRIPTION | OPTIONS | AUTHOR
